--- a/leaf-server/src/main/resources/leaf.properties
+++ b/leaf-server/src/main/resources/leaf.properties
@@ -1,9 +1,9 @@
-leaf.name=com.sankuai.leaf.opensource.test
-leaf.segment.enable=false
-#leaf.jdbc.url=
-#leaf.jdbc.username=
-#leaf.jdbc.password=
+leaf.name=kids-english
+leaf.segment.enable=true
+leaf.jdbc.url=jdbc:mysql://youdao_test_db.corp.youdao.com:13306/db_kideng_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+leaf.jdbc.username=kideng_job
+leaf.jdbc.password=6W4lQPh1TihqottX
 
-leaf.snowflake.enable=false
-#leaf.snowflake.zk.address=
-#leaf.snowflake.port=
+leaf.snowflake.enable=true
+leaf.snowflake.zk.address=gpu08:2181
+leaf.snowflake.port=8080
