MOD: snowflake兼容容器环境

--- a/leaf-server/src/main/resources/application.properties
+++ b/leaf-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.freemarker.cache=false
+åspring.freemarker.cache=false
 spring.freemarker.charset=UTF-8
 spring.freemarker.check-template-location=true
 spring.freemarker.content-type=text/html
