--- a/leaf-server/src/main/resources/leaf.properties
+++ b/leaf-server/src/main/resources/leaf.properties
@@ -5,5 +5,5 @@ leaf.jdbc.username=kideng_job
 leaf.jdbc.password=6W4lQPh1TihqottX
 
 leaf.snowflake.enable=true
-leaf.snowflake.zk.address=gpu08:2181
+leaf.snowflake.zk.address=zk-cs:2181
 leaf.snowflake.port=8080
