--- a/leaf-server/src/main/resources/leaf.properties
+++ b/leaf-server/src/main/resources/leaf.properties
@@ -1,9 +1,19 @@
+#leaf.name=kids-english
+#leaf.segment.enable=true
+#leaf.jdbc.url=jdbc:mysql://youdao_test_db.corp.youdao.com:13306/db_kideng_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+#leaf.jdbc.username=kideng_job
+#leaf.jdbc.password=6W4lQPh1TihqottX
+
+#leaf.snowflake.enable=true
+#leaf.snowflake.zk.address=zk-cs:2181
+#leaf.snowflake.port=8080
+
 leaf.name=kids-english
 leaf.segment.enable=true
-leaf.jdbc.url=jdbc:mysql://youdao_test_db.corp.youdao.com:13306/db_kideng_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+leaf.jdbc.url=jdbc:mysql://kideng-db-writer.corp.yodao.com:3336/db_kideng_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 leaf.jdbc.username=kideng_job
-leaf.jdbc.password=6W4lQPh1TihqottX
+leaf.jdbc.password=9uFQzJMjA
 
 leaf.snowflake.enable=true
-leaf.snowflake.zk.address=zk-cs:2181
+leaf.snowflake.zk.address=zj-zk1:2181
 leaf.snowflake.port=8080
